tests/snapshots/logfire_integration_test__dual_export_observation.snap
---
source: tests/logfire_integration_test.rs
expression: json
---
{
  "attributes": {
    "gen_ai.input.messages": "[{\"role\":\"user\",\"parts\":[{\"type\":\"text\",\"content\":\"Hello!\"}]}]",
    "gen_ai.operation.name": "chat",
    "gen_ai.output.messages": "[{\"role\":\"assistant\",\"parts\":[{\"type\":\"text\",\"content\":\"Hello! How can I help you today?\"}],\"finish_reason\":\"stop\"}]",
    "gen_ai.provider.name": "openai",
    "gen_ai.request.model": "gpt-4o-mini",
    "gen_ai.response.id": "chatcmpl-test123",
    "gen_ai.response.model": "gpt-4o-mini",
    "gen_ai.system": "openai",
    "gen_ai.usage.input_tokens": 12,
    "gen_ai.usage.output_tokens": 8,
    "gen_ai.usage.total_tokens": 20,
    "openinference.span.kind": "LLM"
  },
  "end_time": "[timestamp]",
  "name": "chat",
  "span_id": "[span_id]",
  "span_kind": "Client",
  "start_time": "[timestamp]",
  "status": "Ok",
  "trace_id": "[trace_id]"
}
