tests/snapshots/logfire_integration_test__dual_export_tool_call_pipeline.snap
---
source: tests/logfire_integration_test.rs
expression: json
---
[
  {
    "attributes": {
      "gen_ai.input.messages": "[{\"role\":\"user\",\"parts\":[{\"type\":\"text\",\"content\":\"What's the weather in San Francisco?\"}]}]",
      "gen_ai.operation.name": "chat",
      "gen_ai.output.messages": "[{\"role\":\"assistant\",\"parts\":[{\"type\":\"tool_call\",\"id\":\"call_abc123\",\"name\":\"get_weather\",\"arguments\":\"{\\\"location\\\":\\\"San Francisco\\\",\\\"unit\\\":\\\"celsius\\\"}\"}],\"finish_reason\":\"tool-calls\"}]",
      "gen_ai.provider.name": "openai",
      "gen_ai.request.model": "gpt-4o-mini",
      "gen_ai.response.id": "chatcmpl-tool123",
      "gen_ai.response.model": "gpt-4o-mini",
      "gen_ai.system": "openai",
      "gen_ai.usage.input_tokens": 25,
      "gen_ai.usage.output_tokens": 18,
      "gen_ai.usage.total_tokens": 43,
      "openinference.span.kind": "LLM"
    },
    "end_time": "[timestamp]",
    "name": "chat",
    "parent_span_id": "[span_id]",
    "span_id": "[span_id]",
    "span_kind": "Client",
    "start_time": "[timestamp]",
    "status": "Ok",
    "trace_id": "[trace_id]"
  },
  {
    "attributes": {
      "gen_ai.input.messages": "[{\"role\":\"user\",\"parts\":[{\"type\":\"text\",\"content\":\"What's the weather in San Francisco?\"}]}]",
      "gen_ai.operation.name": "chat",
      "gen_ai.output.messages": "[{\"role\":\"assistant\",\"parts\":[{\"type\":\"text\",\"content\":\"The weather in San Francisco is currently 18°C with partly cloudy skies.\"}],\"finish_reason\":\"stop\"}]",
      "gen_ai.provider.name": "openai",
      "gen_ai.request.model": "gpt-4o-mini",
      "gen_ai.response.id": "chatcmpl-final456",
      "gen_ai.response.model": "gpt-4o-mini",
      "gen_ai.system": "openai",
      "gen_ai.usage.input_tokens": 50,
      "gen_ai.usage.output_tokens": 15,
      "gen_ai.usage.total_tokens": 65,
      "openinference.span.kind": "LLM"
    },
    "end_time": "[timestamp]",
    "name": "chat",
    "parent_span_id": "[span_id]",
    "span_id": "[span_id]",
    "span_kind": "Client",
    "start_time": "[timestamp]",
    "status": "Ok",
    "trace_id": "[trace_id]"
  },
  {
    "attributes": {},
    "end_time": "[timestamp]",
    "name": "pipeline",
    "span_id": "[span_id]",
    "span_kind": "Internal",
    "start_time": "[timestamp]",
    "status": "Unset",
    "trace_id": "[trace_id]"
  }
]
