tests/snapshots/logfire_integration_test__logfire_generation_span.snap
---
source: tests/logfire_integration_test.rs
expression: json
---
{
  "attributes": {
    "gen_ai.operation.name": "chat",
    "gen_ai.request.model": "gpt-4o-mini",
    "gen_ai.response.id": "chatcmpl-logfire1",
    "gen_ai.response.model": "gpt-4o-mini",
    "gen_ai.system": "openai",
    "gen_ai.usage.input_tokens": "5",
    "gen_ai.usage.output_tokens": "3"
  },
  "end_time": "[timestamp]",
  "name": "chat",
  "span_id": "[span_id]",
  "span_kind": "Internal",
  "start_time": "[timestamp]",
  "status": "Unset",
  "trace_id": "[trace_id]"
}
