tests/snapshots/logfire_integration_test__logfire_traced_chat_completion.snap
---
source: tests/logfire_integration_test.rs
expression: json
---
{
  "attributes": {
    "gen_ai.operation.name": "chat",
    "gen_ai.request.model": "gpt-4o-mini",
    "gen_ai.response.id": "chatcmpl-test123",
    "gen_ai.response.model": "gpt-4o-mini",
    "gen_ai.system": "openai",
    "gen_ai.usage.input_tokens": "12",
    "gen_ai.usage.output_tokens": "8"
  },
  "end_time": "[timestamp]",
  "name": "chat",
  "span_id": "[span_id]",
  "span_kind": "Internal",
  "start_time": "[timestamp]",
  "status": "Unset",
  "trace_id": "[trace_id]"
}
