tests/snapshots/logfire_integration_test__logfire_traced_tool_call.snap
---
source: tests/logfire_integration_test.rs
expression: json
---
[
  {
    "attributes": {
      "gen_ai.operation.name": "chat",
      "gen_ai.request.model": "gpt-4o-mini",
      "gen_ai.response.id": "chatcmpl-tool123",
      "gen_ai.response.model": "gpt-4o-mini",
      "gen_ai.system": "openai",
      "gen_ai.usage.input_tokens": "25",
      "gen_ai.usage.output_tokens": "18"
    },
    "end_time": "[timestamp]",
    "name": "chat",
    "parent_span_id": "[span_id]",
    "span_id": "[span_id]",
    "span_kind": "Internal",
    "start_time": "[timestamp]",
    "status": "Unset",
    "trace_id": "[trace_id]"
  },
  {
    "attributes": {
      "gen_ai.operation.name": "chat",
      "gen_ai.request.model": "gpt-4o-mini",
      "gen_ai.response.id": "chatcmpl-final456",
      "gen_ai.response.model": "gpt-4o-mini",
      "gen_ai.system": "openai",
      "gen_ai.usage.input_tokens": "50",
      "gen_ai.usage.output_tokens": "15"
    },
    "end_time": "[timestamp]",
    "name": "chat",
    "parent_span_id": "[span_id]",
    "span_id": "[span_id]",
    "span_kind": "Internal",
    "start_time": "[timestamp]",
    "status": "Unset",
    "trace_id": "[trace_id]"
  },
  {
    "attributes": {},
    "end_time": "[timestamp]",
    "name": "pipeline",
    "span_id": "[span_id]",
    "span_kind": "Internal",
    "start_time": "[timestamp]",
    "status": "Unset",
    "trace_id": "[trace_id]"
  }
]
